--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -42,6 +42,8 @@ $colors: (
   baja:       green,
   media:      orange,
   alta:       red,
+  aogrey:     #DDDDDD,
+  aogreen:    #82BE33,
 
 );
 
