--- a/src/pages/nuevo-ticket/nuevo-ticket.scss
+++ b/src/pages/nuevo-ticket/nuevo-ticket.scss
@@ -8,4 +8,10 @@ page-nuevo-ticket {
 
     }
 
+    .foto_preview{
+        width: 100%;
+        height: 250px;
+        border: 1px solid #CECECE;
+    }
+
 }
